# mamushi

./: .gitignore  DESIGN.md  Makefile  addnative.ml  allocation.ml  anf.ml  assembly.ml  compile.ml  desugar.ml  dune  errors.ml  exprs.ml  flake.nix  gc.c  gc.h  graph.ml  lexer.mll  main.c  main.ml  match.md  parser.mly  phases.ml  pretty.ml  rename.ml  runner.ml  snake.c  snake.h  test.ml  todo.md  typecheck.ml  utils.ml  wellformed.ml
input/: alessanra.racer  hello.racer  input.racer  should_err.racer  should_ok.racer
input/do_err/: and_got_num.racer  arith_got_logic.racer  gc_in_function_stack_2.out  if_got_num.racer  or_got_num.racer  overflow.racer  very_nested_gc_2.out
input/do_pass/: add_inputs.racer  add_let.racer  bt_program.racer  complex_pattern_match_1.racer  func_test.racer  gc_in_function_stack_1.racer  higher_order.racer  in2.racer  is_odd_input.racer  is_odd_mutual_rec_9.racer  length.racer  list_program.racer  lists.racer  logic_with_lets.racer  long_program1.racer  long_program2.racer  long_program3.racer  manylets.racer  more_complex_func.racer  nested_input.racer  print_if.racer  program.racer  reverse.racer  scope_and_if.racer  so_many_prints.racer  tail_call.racer  test1.racer  tree.racer  very_nested_gc_1.racer
