(library
 (name racer_impl)
 (modules assembly compile errors exprs phases pretty runner lexer parser allocation anf desugar utils wellformed typecheck rename addnative graph)
 (libraries ounit2 extlib unix)
 (wrapped false))

(ocamllex
 (modules lexer))

(ocamlyacc
 (modules parser))

(executable
 (name main)
 (modules main)
 (libraries racer_impl))

(test
 (name test)
 (modules test)
 (libraries racer_impl))

(env
 (dev
  (flags
   (:standard -warn-error -A))))
